2006-07-23    <djmaecki@ull.at>

	* src/dlvhex/Literal.cpp (Literal::operator=): Return *this.

	* src/dlvhex/Atom.cpp: Pass ctor arguments by reference.
	* include/dlvhex/Atom.h: Likewise.

	* include/dlvhex/AtomSet.h (AtomSet::const_iterator::operator->):
	Add operator.

2006-07-19  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/Term.h: Added function isAnon().

	* src/dlvhex/ASPsolver.cpp (callSolver): Debug output added/removed.

	* src/dlvhex/HexParser.ypp: Removed comment.

	* src/dlvhex/Term.cpp: Added isAnon(). Fixed wrong unification
	handling.


2006-07-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* m4/doxygen.m4: Fix for newer autoconfs, see Debian Bug #368712.

2006-07-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Add AC_LIBTOOL_DLOPEN.

	* src/dlvhex/Makefile.am (dlvhex_LDFLAGS): Add -static and
	-export-dynamic.

2006-06-21  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
	
	* configure.ac: Add AC_LIBTOOL_DLOPEN.

	* src/dlvhex/Makefile.am (dlvhex_LDFLAGS): Add -static and
	-export-dynamic.

2006-06-16  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* configure.ac: Changed version number to 1.0. This will now be the
	official dlvhex 1.0 release.
	

2006-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/Makefile.am: Check versions of bison and flex.

	* src/dlvhex/HexParserDriver.cpp: Include HexFlexLexer.h

	* src/dlvhex/DLVresultParserDriver.cpp: Include DLVresultFlexLexer.h.

	* src/dlvhex/DLVresultParser.ypp: Adapt parser to bison 2.2/2.3.
	* src/dlvhex/DLVresultScanner.lpp: Likewise.
	* src/dlvhex/HexParser.ypp: Likewise.
	* src/dlvhex/HexScanner.lpp: Likewise.

	* include/dlvhex/Makefile.am (noinst_HEADERS): Add
	HexFlexLexer.h and DLVresultFlexLexer.h.

	* include/dlvhex/ExternalAtom.h: Fix warning.
	* src/dlvhex/ExternalAtom.cpp: Likewise.

	* include/dlvhex/HexParserDriver.h (HexFlexLexer): Remove.

	* include/dlvhex/DLVresultParserDriver.h (DLVresultFlexLexer): Remove.
